--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@astrojs/partytown": "^1.2.3",
     "@astrojs/rss": "^2.4.1",
     "@loglib/tracker": "^0.3.5",
     "@resvg/resvg-js": "^2.4.1",
