Feedback with database(i am dumb)

--- a/.env
+++ b/.env
@@ -1,3 +1,12 @@
 SPOTIFY_CLIENT_ID = e949ffcca3394e699ff8f835556a6dc1
 SPOTIFY_CLIENT_SECRET = 5b275b41ebf142248d69374993955d19
 SPOTIFY_REFRESH_TOKEN = 
+
+# This was inserted by `prisma init`:
+# Environment variables declared in this file are automatically made available to Prisma.
+# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
+
+# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
+# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
+
+DATABASE_URL="postgresql://neondb_owner:A3chu2keWrLR@ep-fragrant-cloud-a1sj004d.ap-southeast-1.aws.neon.tech/neondb"
