--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-      "postinstall": "prisma generate",
+    "postinstall": "prisma generate",
     "dev": "next dev",
     "build": " prisma generate && next build",
     "start": "next start",
@@ -24,6 +24,7 @@
     "axios": "^1.7.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cors": "^2.8.5",
     "framer-motion": "^11.3.30",
     "lucide-react": "^0.435.0",
     "next": "14.2.6",
@@ -36,6 +37,7 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
